<?xml version="1.0"?>
<package format="2">
  <name>move_omorobot</name>
  <version>0.0.0</version>
  <description>The move_omorobot package</description>
  <maintainer email="kyu@todo.todo">kyu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>omo_r1_bringup</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
